k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-node-app
  template:
    metadata:
      labels:
        app: devops-node-app
    spec:
      containers:
      - name: devops-node-app
        image: 283904064946.dkr.ecr.us-east-1.amazonaws.com/devops-node-app:v1
        ports:
        - containerPort: 3000
