k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-node-service
spec:
  type: ClusterIP
  selector:
    app: devops-node-app
  ports:
  - port: 80
    targetPort: 3000
